--- a/.gitconfig
+++ b/.gitconfig
@@ -2,28 +2,44 @@
         a  = add
         ad = add
         ap = add -p
+        pa = add --patch
+        ai = add -i
+
+        b = branch
+        br = branch
+
         st = status
+
         ci = commit
         cim = commit -m
         cam = commit -Am
         cia = commit --amend
-        br = branch
+        chp = cherry-pick
+
+        cl = clone
+
         co = checkout
+
         df = diff
         dfs = diff --staged
+        diffstat = diff --stat -r
+
         lg = log -p
         lo = log --decorate
         lol = log --graph --decorate --pretty=oneline --abbrev-commit
         lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
         lgl = log --graph --full-history --all --color --pretty=tformat:"%x1b[31m%h%x09%x1b[32m%d%x1b[0m%x20%s%x20%x1b[33m(%an)%x1b[0m"
-        pa = add --patch
-        ai = add -i
         who = shortlog -s --
+
         ps = push
         pl = pull
-        diffstat = diff --stat -r
+
+        rb = rebase
+        ri = rebase -i
+
         ss = stash
         sa = stash apply
         sp = stash pop
         sl = stash list
         sd = stash drop
+        sh = stash show
