--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
     st = status
 
     ci = commit
+    cif = commit --fixup
     cim = commit -m
     cam = commit -Am
     cia = commit --amend
@@ -30,6 +31,7 @@
     lol = log --graph --decorate --pretty=oneline --abbrev-commit
     lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
     lgl = log --graph --full-history --all --color --pretty=tformat:"%x1b[31m%h%x09%x1b[32m%d%x1b[0m%x20%s%x20%x1b[33m(%an)%x1b[0m"
+    alltags = log --decorate --oneline --simplify-by-decoration
     who = shortlog -s --
 
     ps = push
