--- a/kitty.conf
+++ b/kitty.conf
@@ -35,3 +35,9 @@ window_alert_on_bell yes
 
 
 background_opacity 1.0
+
+
+remember_window_size  no
+initial_window_width  80c
+initial_window_height 18c
+placement_strategy center
