--- a/kitty.conf
+++ b/kitty.conf
@@ -41,3 +41,5 @@ remember_window_size  no
 initial_window_width  80c
 initial_window_height 18c
 placement_strategy center
+
+allow_remote_control yes
