--- a/i3/config
+++ b/i3/config
@@ -218,7 +218,7 @@ bindsym $mod+F1 workspace $wf1
 bindsym $mod+Shift+F1 move container to workspace $wf1
 assign [class="Navigator"] $wf1
 assign [class="Firefox"] $wf1
-assign [class="firefof"] $wf1
+assign [class="firefox"] $wf1
 
 # Workspace mail (fa-envelope-o)
 set $wf2 
