don't check update and don't ask for confirmation for closing terms

--- a/kitty.conf
+++ b/kitty.conf
@@ -43,3 +43,7 @@ initial_window_height 18c
 placement_strategy center
 
 allow_remote_control yes
+
+update_check_interval 0
+
+confirm_os_window_close 0
