--- a/kitty.conf
+++ b/kitty.conf
@@ -13,7 +13,7 @@ cursor_blink_interval 0
 scrollback_lines 4096
 
 
-mouse_hide_wait 10.0
+mouse_hide_wait 1.0
 
 
 url_color #0087bd
@@ -47,3 +47,5 @@ allow_remote_control yes
 update_check_interval 0
 
 confirm_os_window_close 0
+
+linux_display_server x11
