--- a/i3/config
+++ b/i3/config
@@ -159,9 +159,9 @@ bindsym $mod+Left  workspace prev
 #                               shortcuts                                 #
 ###########################################################################
 # volume
-bindsym XF86AudioRaiseVolume exec       "amixer set Master 5%+"
-bindsym XF86AudioLowerVolume exec       "amixer set Master 5%-"
-bindsym XF86AudioMute exec              "amixer set Master toggle"
+bindsym XF86AudioRaiseVolume exec       "~/scripts/setsound.sh +3%"
+bindsym XF86AudioLowerVolume exec       "~/scripts/setsound.sh +3%"
+bindsym XF86AudioMute exec              "~/scripts/setsound.sh toggle"
 bindsym XF86AudioPause nop
 bindsym XF86AudioPlay nop
 
